Added mechanisms for internal graph storage and id generation

--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,11 @@ dependencies {
     /* CliKt */
     implementation group: 'com.github.ajalt', name: 'clikt', version: '2.8.0'
 
+    /* Scrimage */
+    implementation group: 'com.sksamuel.scrimage', name: 'scrimage-core', version: '4.0.31'
+    implementation group: 'com.sksamuel.scrimage', name: 'scrimage-formats-extra', version: '4.0.31'
+    implementation group: 'com.sksamuel.scrimage', name: 'scrimage-webp', version: '4.0.31'
+
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.6.10'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
