--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.6.10'
-    id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.10'
+    id 'org.jetbrains.kotlin.jvm' version '1.7.20'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.20'
     id 'java'
 }
 
@@ -13,6 +13,7 @@ repositories {
 
 dependencies {
 
+    def javalin = '5.1.1'
     def log4jVersion = '2.17.1'
     def jlineVersion = '3.21.0'
     def jacksonVersion = '2.13.1'
@@ -20,7 +21,7 @@ dependencies {
     def twelvemonkeysVersion = '3.8.2'
 
     /* Javalin */
-    implementation group: 'io.javalin', name: 'javalin', version: '4.4.0'
+    implementation group: 'io.javalin', name: 'javalin', version: javalin
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: jacksonVersion
     implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: jacksonVersion
     implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: jacksonVersion
@@ -61,9 +62,9 @@ dependencies {
     implementation group: 'org.apache.xmlgraphics',     name: 'batik-transcoder',   version: '1.14'
     implementation group: 'com.twelvemonkeys.imageio',  name: 'imageio-tiff',       version: twelvemonkeysVersion
 
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.6.21'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.7.20'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
 }
 
 test {
