--- a/build.gradle
+++ b/build.gradle
@@ -9,23 +9,28 @@ version '0.1-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    maven {
+        url "https://oss.sonatype.org/content/repositories/snapshots/"
+    }
 }
 
 dependencies {
 
-    def javalin = '5.1.1'
+    def javalinVersion = '5.1.1'
     def log4jVersion = '2.17.1'
     def jlineVersion = '3.21.0'
     def jacksonVersion = '2.13.1'
     def scrimageVersion = '4.0.31'
     def twelvemonkeysVersion = '3.8.2'
+    def cottontaildbDriverVerion='0.14.4-SNAPSHOT'
+    def grpcVersion = '1.49.2'
+    def protobufVersion = '3.21.7'
 
     /* Javalin */
-    implementation group: 'io.javalin', name: 'javalin', version: javalin
+    implementation group: 'io.javalin', name: 'javalin', version: javalinVersion
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: jacksonVersion
     implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: jacksonVersion
     implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: jacksonVersion
-
 
     /* Log4J */
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: log4jVersion
@@ -61,6 +66,11 @@ dependencies {
     implementation group: 'com.twelvemonkeys.imageio',  name: 'imageio-batik',      version: twelvemonkeysVersion
     implementation group: 'org.apache.xmlgraphics',     name: 'batik-transcoder',   version: '1.14'
     implementation group: 'com.twelvemonkeys.imageio',  name: 'imageio-tiff',       version: twelvemonkeysVersion
+
+    /* CottontailDB Driver */
+    implementation group: 'org.vitrivr', name: 'cottontaildb-proto', version: cottontaildbDriverVerion
+    implementation group: 'io.grpc', name: 'grpc-all', version: grpcVersion
+    implementation group: 'com.google.protobuf', name: 'protobuf-java', version: protobufVersion
 
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.7.20'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
