--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,10 @@ dependencies {
 
     implementation group: 'org.tinyspline', name: 'tinyspline', version: '0.6.0-1'
 
+    implementation group: 'com.github.kokorin.jaffree', name: 'jaffree', version: '2022.06.03'
+
+    implementation group: 'org.apache.commons', name: 'commons-compress', version: '1.23.0'
+
     /* CSV */
     implementation group: 'com.github.doyaaaaaken', name: 'kotlin-csv-jvm', version: '1.2.0'
 
