--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,8 @@ dependencies {
 
     implementation group: 'de.javagl', name: 'obj', version: '0.4.0'
 
+    implementation group: 'com.github.davidmoten', name: 'hilbert-curve', version: '0.2.2'
+
     /* CSV */
     implementation group: 'com.github.doyaaaaaken', name: 'kotlin-csv-jvm', version: '1.2.0'
 
