Continue redesign segmentation class hierarchy (still WIP)
- take Segmentation.kt apart into individual files
- implement TODO functions
- redesign rotoscope to allow for arbitrary shapes
- various other small things

--- a/build.gradle
+++ b/build.gradle
@@ -74,6 +74,8 @@ dependencies {
 
     implementation group: 'com.github.davidmoten', name: 'hilbert-curve', version: '0.2.2'
 
+    implementation 'de.sciss:shapeinterpolator:0.1.0'
+
     /* CSV */
     implementation group: 'com.github.doyaaaaaken', name: 'kotlin-csv-jvm', version: '1.2.0'
 
