--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,7 @@ dependencies {
 
     /* Apache commons */
     implementation group: 'commons-codec', name: 'commons-codec', version: '1.15'
+    implementation group: 'org.apache.commons', name: 'commons-compress', version: '1.23.0'
 
     /* KotlinX extensions */
     implementation group: 'org.jetbrains.kotlinx', name: 'kotlinx-serialization-json', version: '1.3.2'
