Added basic SPARQL querying using Jena

--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,9 @@ dependencies {
     def grpcVersion = '1.49.2'
     def protobufVersion = '3.21.7'
     def exposedVersion = '0.40.1'
-    def antlrVersion = '4.13.0'
+//    def antlrVersion = '4.13.0'
+    def jenaVersion = '4.8.0'
+    def picnicVersion = '0.6.0'
 
     /* Javalin */
     implementation group: 'io.javalin', name: 'javalin', version: javalinVersion
@@ -66,6 +68,7 @@ dependencies {
     implementation group: 'org.jline', name: 'jline-terminal-jna', version: jlineVersion
     implementation group: 'org.jline', name: 'jline-reader', version: jlineVersion
     implementation group: 'org.jline', name: 'jline-builtins', version: jlineVersion
+    implementation group: 'com.jakewharton.picnic', name: 'picnic', version: picnicVersion
 
     /* CliKt */
     implementation group: 'com.github.ajalt', name: 'clikt', version: '2.8.0'
@@ -98,9 +101,14 @@ dependencies {
     implementation group: 'org.jetbrains.exposed', name: 'exposed-jdbc', version: exposedVersion
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.2'
 
-    /* Antlr4 */
-    antlr group: 'org.antlr', name: 'antlr4', version: antlrVersion
-    implementation group: 'org.antlr', name: 'antlr4-runtime', version: antlrVersion
+//    /* Antlr4 */
+//    antlr group: 'org.antlr', name: 'antlr4', version: antlrVersion
+//    implementation group: 'org.antlr', name: 'antlr4-runtime', version: antlrVersion
+
+    /* Jena */
+    implementation group: 'org.apache.jena', name: 'jena-core', version: jenaVersion
+    implementation group: 'org.apache.jena', name: 'jena-arq', version: jenaVersion
+
 
 
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.8.10'
@@ -108,20 +116,20 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
 }
 
-generateGrammarSource {
-    maxHeapSize = "64m"
-    arguments += ["-visitor",
-                  "-long-messages",
-                  "-package", "org.megras.lang.sparql"]
-
-}
+//generateGrammarSource {
+//    maxHeapSize = "64m"
+//    arguments += ["-visitor",
+//                  "-long-messages",
+//                  "-package", "org.megras.lang.sparql"]
+//
+//}
 
 test {
     useJUnitPlatform()
 }
 
 compileKotlin {
-    dependsOn(tasks.generateGrammarSource)
+//    dependsOn(tasks.generateGrammarSource)
     kotlinOptions.jvmTarget = '1.8'
 }
 
