Add comments and descriptions and fix some minor things

--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     def jlineVersion = '3.21.0'
     def jacksonVersion = '2.14.2'
     def scrimageVersion = '4.0.31'
+    def batikVersion = '1.16'
     def twelvemonkeysVersion = '3.8.2'
     def cottontaildbDriverVerion='0.14.4-SNAPSHOT'
     def grpcVersion = '1.49.2'
@@ -79,21 +80,26 @@ dependencies {
     implementation group: 'com.sksamuel.scrimage', name: 'scrimage-formats-extra', version: scrimageVersion
     implementation group: 'com.sksamuel.scrimage', name: 'scrimage-webp', version: scrimageVersion
 
-    implementation group: 'org.apache.xmlgraphics', name: 'batik-parser', version: '1.16'
-    implementation group: 'org.apache.xmlgraphics', name: 'batik-ext', version: '1.16'
+    /* SVG path parsing */
+    implementation group: 'org.apache.xmlgraphics', name: 'batik-parser', version: batikVersion
+    implementation group: 'org.apache.xmlgraphics', name: 'batik-ext', version: batikVersion
 
+    /* PDF */
     implementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.27'
 
+    /* Splines */
     implementation group: 'org.tinyspline', name: 'tinyspline', version: '0.6.0-1'
 
+    /* FFmpeg wrapper */
     implementation group: 'com.github.kokorin.jaffree', name: 'jaffree', version: '2022.06.03'
 
-    implementation group: 'org.apache.commons', name: 'commons-compress', version: '1.23.0'
-
+    /* Wavefront OBJ wrapper */
     implementation group: 'de.javagl', name: 'obj', version: '0.4.0'
 
+    /* Hilbert curve utilities */
     implementation group: 'com.github.davidmoten', name: 'hilbert-curve', version: '0.2.2'
 
+    /* Interpolate java.awt.Shape objects */
     implementation 'de.sciss:shapeinterpolator:0.1.0'
 
     /* Evaluate equations */
@@ -102,10 +108,12 @@ dependencies {
     /* CSV */
     implementation group: 'com.github.doyaaaaaken', name: 'kotlin-csv-jvm', version: '1.9.0'
 
+    implementation group: 'org.apache.commons', name: 'commons-compress', version: '1.23.0'
+
     /* Image decoding */
     implementation group: 'com.twelvemonkeys.imageio',  name: 'imageio-jpeg',       version: twelvemonkeysVersion
     implementation group: 'com.twelvemonkeys.imageio',  name: 'imageio-batik',      version: twelvemonkeysVersion
-    implementation group: 'org.apache.xmlgraphics',     name: 'batik-transcoder',   version: '1.14'
+    implementation group: 'org.apache.xmlgraphics',     name: 'batik-transcoder',   version: batikVersion
     implementation group: 'com.twelvemonkeys.imageio',  name: 'imageio-tiff',       version: twelvemonkeysVersion
 
     /* CottontailDB Driver */
